syntax = "proto3";

service PostService {
    rpc GetPostById(GetPostByIdReq) returns (GetPostByIdRep) {}
}

message Post {
    int32 id = 1;
    string title = 2;
    string path = 3;
    string content = 4;
}

message GetPostByIdReq {
    int32 id = 1;
}

message GetPostByIdRep {
    Post data = 1;
}